tests/paczka1/small_fuzzy/50953353.err
Error in line 2: S913 S990 94,7
Error in line 3: S913 S155 19,1
Error in line 5: GEN4K71 S670 85,6
Error in line 14: S913 S670 -1,2
Error in line 10: GEN4K71 S155 35,8
